app/notification/k8s/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  namespace: notification
  labels: { app: notification }
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector: { matchLabels: { app: notification } }
  strategy:
    type: RollingUpdate
    rollingUpdate: { maxSurge: 1, maxUnavailable: 0 }
  template:
    metadata:
      labels: { app: notification }
    spec:
      containers:
        - name: notification
          image: trivip002/notification-service:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          resources:
            requests: { cpu: "200m", memory: "512Mi" }
            limits:   { memory: "1Gi" }
          readinessProbe:
            httpGet:
              path: /notification-service/actuator/health
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /notification-service/actuator/health
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          # Nếu app khởi động chậm, startupProbe cho 150s “ân hạn”
          startupProbe:
            httpGet:
              path: /notification-service/actuator/health
              port: 8081
            periodSeconds: 5
            failureThreshold: 30
