app/notification/k8s/notification-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-ingress
  namespace: notification
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.devapihub.com
      secretName: www-devapihub-com-tls
  rules:
    - host: www.devapihub.com
      http:
        paths:
          - path: /notification-service
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 8081
